--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -3,12 +3,6 @@ body {
   background-color: #fafafa;
 }
 
-h3 {
-  font-size: 3em;
-  clear: both;
-  text-align: center;
-}
-
 .outer-div {
   max-width: 1500px;
 }
@@ -18,6 +12,7 @@ h3 {
   width: 10%;
   text-align: center;
   position: relative;
+  margin-top: 10%;
 }
 
 .buttons-ul {
@@ -62,41 +57,25 @@ h3 {
   width: 90%;
 }
 
-.command-line-div {
-  text-align: center;
+h1 {
+  font-size: 3em;
+   margin-right: 10%;
 }
 
-.command-line {
-  height: 300px;
-  width: 600px;
+.blog-img-div {
+  text-align: center;
 }
 
 img {
   margin-right: 10%;
 }
 
-.github-image-div {
-  text-align: center;
-  margin: 0 auto;
-}
-
-.github-img {
-  height: 250px;
-  max-width: 1000px;
-}
-
-h1,
 h2,
-h4,
 p,
 ol,
 ul,
 footer {
   margin-right: 10%;
-}
-
-footer {
-  clear: both;
 }
 
 .bottom-buttons {
@@ -112,4 +91,5 @@ footer {
 
 footer {
   margin-left: 10%;
+    clear: both;
 }
