--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -76,14 +76,14 @@ h1 {
 }
 
 h4 {
-  font-size: 2.5em;
+  font-size: 2em;
   margin-top: 20px;
   color: #0000cc;
 }
 
 .about-left {
   float: left;
-  max-width: 300px;
+  max-width: 20%;
   text-align: center;
 }
 
@@ -113,7 +113,7 @@ h4 {
 
 .about-right {
   border-left: 1px solid black;
-  max-width: 1000px;
+  max-width: 75%;
   text-align: center;
   float: right;
   margin-top: 30px;
@@ -123,7 +123,7 @@ h4 {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  margin-top: -50px;
+  margin-top: -30px;
 }
 
 .about-right p {
@@ -146,15 +146,16 @@ h4 {
 }
 
 h2 {
-  font-size: 4em;
+  font-size: 3em;
   color: #0000cc;
   padding-top: 30px;
 }
 
 .projects img {
   margin: 50px;
-  margin-top: 10px;
+  margin-top: 70px;
   opacity: 0.8;
+  width: 13em;
 }
 
 .projects img:hover {
