--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -128,7 +128,7 @@ h4 {
 
 .about-right p {
   text-align: left;
-  font-size: 18px;
+  font-size: 1.1em;
   margin-left: 50px;
   margin-right: 50px;
 }
