--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,3 +1,13 @@
+@media only screen and (max-width: 600px) {
+  .about-left {
+    max-width: 100%;
+  }
+  
+    .about-right {
+    max-width: 100%;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -24,7 +34,7 @@ body {
   display: block;
   text-align: center;
   text-decoration: none;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: white;
   padding: 14px 16px;
 }
@@ -36,7 +46,7 @@ body {
 h1 {
   text-align: center;
   color: #00ffd7;
-  font-size: 9em;
+  font-size: 12vw;
   left: 0;
   right: 0;
   position: absolute;
@@ -76,7 +86,8 @@ h1 {
 }
 
 .about-me {
-  height: 550px;
+  height: auto;
+  max-width: 100%;
 }
 
 h4 {
@@ -87,7 +98,8 @@ h4 {
 
 .about-left {
   float: left;
-  max-width: 20%;
+  max-width: 25%;
+  height: auto;
   text-align: center;
 }
 
@@ -118,6 +130,7 @@ h4 {
 .about-right {
   border-left: 1px solid black;
   max-width: 75%;
+  height: auto;
   text-align: center;
   float: right;
   margin-top: 30px;
@@ -144,19 +157,19 @@ h4 {
 .projects {
   clear: both;
   text-align: center;
-  height: 550px;
-  max-width: 1500;
+  height: auto;
+  max-width: 100%;
   background-color: #c0c0c0;
 }
 
 h2 {
-  font-size: 3em;
+  font-size: 2.5em;
   color: #0000cc;
   padding-top: 30px;
 }
 
 .projects img {
-  margin: 50px;
+  margin: 5vw;
   margin-top: 70px;
   opacity: 0.8;
   width: 13em;
