--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,10 +1,13 @@
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 62.5em) {
   .about-left {
     max-width: 100%;
+    float: none;
   }
   
     .about-right {
     max-width: 100%;
+        float: none;
+        border-left: none;
   }
 }
 
@@ -83,6 +86,7 @@ h1 {
   background-attachment: fixed;
   max-width: 100%;
   height: 550px;
+      background-position: center center;
 }
 
 .about-me {
