--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 930px) {
+@media only screen and (max-width: 480px) {
   .about-left {
     max-width: 100%;
     float: none;
@@ -105,6 +105,7 @@ h4 {
   max-width: 25%;
   height: auto;
   text-align: center;
+  overflow: hidden;
 }
 
 .about-left .contact-me-h4 {
