--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -85,7 +85,7 @@ h1 {
   background-size: cover;
   background-attachment: fixed;
   max-width: 100%;
-  height: 550px;
+  height: 90vh;
       background-position: center center;
 }
 
