--- a/stylesheets/blog-index.css
+++ b/stylesheets/blog-index.css
@@ -6,9 +6,34 @@ body {
   text-align: center;
 }
 
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar li {
+  float: right;
+}
+
+.navbar a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: white;
+  padding: 14px 16px;
+}
+
+.navbar a:hover {
+  background-color: #111;
+}
+
 img {
   width: 50%;
-  height: auto;
+  height: 80vh;
   float: left;
   border-radius: 12px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
