--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -149,7 +149,7 @@ h4 {
 
 .about-right p {
   text-align: left;
-  font-size: 1.1em;
+  font-size: 1.5vw;
   margin-left: 50px;
   margin-right: 50px;
 }
