--- a/stylesheets/blog-index.css
+++ b/stylesheets/blog-index.css
@@ -6,43 +6,19 @@ body {
   text-align: center;
 }
 
-.navbar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-.navbar li {
-  float: right;
-}
-
-.navbar a {
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1.2em;
-  color: white;
-  padding: 14px 16px;
-}
-
-.navbar a:hover {
-  background-color: #111;
-}
-
 img {
   width: 50%;
   height: 80vh;
   float: left;
+  margin-left: 10px;
   border-radius: 12px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 ol {
   text-align: left;
-  float: right;
-  width: 40%;
+  float: left;
+  width: 35%;
 }
 
 li {
