--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -21,6 +21,13 @@ body {
     box-sizing: border-box;
 }
 
+nav {
+  position:fixed;
+  max-width: 100%;
+  width: 100vw;
+  z-index: 1;
+}
+
 .navbar {
   list-style-type: none;
   margin: 0;
