--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -59,7 +59,7 @@ h1 {
   left: 0;
   right: 0;
   position: absolute;
-  margin-top: 170px;
+  margin-top: 30vh;
   text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
   animation: change-color 5s ease-in-out 2s infinite alternate;
   -webkit-animation: change-color 5s ease-in-out 2s infinite alternate;
