--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -154,8 +154,8 @@ h4 {
 }
 
 .about-right p {
-  text-align: left;
-  font-size: 1.3vw;
+  text-align: justify;
+  font-size: 1.2vw;
   margin-left: 50px;
   margin-right: 50px;
 }
