--- a/stylesheets/blog-index.css
+++ b/stylesheets/blog-index.css
@@ -1,3 +1,34 @@
+@media (max-width: 480px) {
+  
+  img {
+    width: 90vw;
+  }
+  
+  h1 {
+    max-width: 90%;
+  }
+  
+  ol {
+    max-width: 80%;
+  }
+  
+}
+
+@media (min-width: 481px) {
+  img {
+      width: 50%;
+  }
+  
+    h1 {
+    max-width: 100%;
+  }
+  
+  ol {
+      width: 35%;
+  }
+}
+
+
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -7,7 +38,6 @@ body {
 }
 
 img {
-  width: 50%;
   height: 80vh;
   float: left;
   margin-left: 10px;
@@ -18,7 +48,7 @@ img {
 ol {
   text-align: left;
   float: left;
-  width: 35%;
+
 }
 
 li {
