--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,3 +1,20 @@
+@media (max-width: 480px) {
+  img {
+    max-width: 85%;
+    height: auto;  
+  }
+  
+  .buttons-ul {
+    display: none;
+  }
+
+}
+
+@media (min-width: 481px) {
+  
+}
+
+
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: #fafafa;
