Add photo to folder in case original link is disabled in the future

--- a/projects/pomodoro-clock/src/stylesheet.css
+++ b/projects/pomodoro-clock/src/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://oitecareersblog.files.wordpress.com/2010/06/tomato.jpg");
+  background-image: url("tomato.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
