Change url to local file path

--- a/projects/random-quotes/src/stylesheet.css
+++ b/projects/random-quotes/src/stylesheet.css
@@ -2,7 +2,7 @@ body {
   max-width: 100%;
   height: 570px;
   background-size: cover;
-  background-image: url('http://img11.deviantart.net/d12c/i/2011/204/7/f/rain_over_window_by_kurodot-d41dh9d.jpg');
+  background-image: url('rain_over_window.jpg');
   background-attachment: fixed;
 }
 
