--- a/projects/maps-locations/src/stylesheet.css
+++ b/projects/maps-locations/src/stylesheet.css
@@ -31,9 +31,7 @@ body {
   background: rgba(0, 0, 0, 0.7);
 }
 
-#search-query,
-.search-button,
-#sidenav-query {
+.search-button {
   margin: 0 auto;
   font-size: 20px;
 }
@@ -44,15 +42,22 @@ body {
   font-size: 2.5em;
 }
 
+#search-query,
+#sidenav-query {
+  margin: 0 auto;
+  font-size: 20px;
+  background-color: transparent;
+  color: white;
+  padding: 10px 20px;
+}
+
 #search-query {
   font-size: 1.2em;
-  padding: 10px 20px;
   width: 33%;
 }
 
 #sidenav-query {
   font-size: 1em;
-  padding: 10px 20px;
   width: 50%;
   margin: 5px;
 }
@@ -70,8 +75,6 @@ body {
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
   background-color: white;
   color: black;
   border: 1px solid #008CBA;
@@ -106,10 +109,6 @@ body {
   transition: 0.5s;
 }
 
-li {
-  list-style-type: none;
-}
-
 .sidenav a,
 li {
   padding: 8px;
@@ -117,7 +116,8 @@ li {
   font-size: 1em;
   color: silver;
   display: block;
-  transition: 0.3s
+  transition: 0.3s;
+  list-style-type: none;
 }
 
 .sidenav a:hover,
