--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,6 +3,9 @@ html, body {
   overflow-x: hidden !important;
 }
 
+#navbar {
+  background-color: transparent;
+}
 .navbar-header .navbar {
   text-decoration: none;
   max-width: 100%;
@@ -10,6 +13,12 @@ html, body {
 
 .navbar .container {
   font-family: 'open sans';
+}
+
+#navbar {
+  background-color: transparent;
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
 }
 
 .home {
