--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -74,6 +74,21 @@ html, body {
   color: #FF4500;
 }
 
+.maps-locations {
+  background-image: url('../imgs/maps-locations.png');
+  background-size: cover;
+  max-width: 100%;
+  height: 50vh;
+}
+
+.textbox-maps {
+  float: right;
+  margin-top: 35vh;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  padding-left: 10px;
+}
+
 .zip-quote {
   background-image: url('../imgs/random-quotes.png');
   background-size: cover;
