Use addClass and removeClass instead of styling inside JS

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -21,8 +21,8 @@ html, body {
   transition: all 0.8s ease;
 }
 
-.navbar-inverse .btn-link {
-  /*color: #9d9d9d;*/
+.toggle-nav {
+  background-color: #dddddd !important;
 }
 
 .navbar-right a {
